[package]
name = "terminusdb-10-to-11-escape-fixup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminus-store = "0.20.0"
clap = {version="4.0", features=["derive"]}
tokio = {version = "1.0", features = ["full"]}
bytes = "1.0"
chrono = "0.4"
futures = "0.3"
thiserror = "1.0"
serde = {version="1.0", features=["derive"]}
postcard = {version="1.0", features=["alloc"]}
itertools = "0.10"